[gd_scene load_steps=34 format=2]

[ext_resource path="res://scripts/enemy1.gd" type="Script" id=1]
[ext_resource path="res://scenes/level/character/BloodEffect.tscn" type="PackedScene" id=2]
[ext_resource path="res://data/images/enemy1/enemy1.png" type="Texture" id=3]
[ext_resource path="res://data/images/enemy1/enemy2.png" type="Texture" id=4]
[ext_resource path="res://data/images/enemy1/enemy3.png" type="Texture" id=5]
[ext_resource path="res://data/images/enemy1/enemy2left.png" type="Texture" id=6]
[ext_resource path="res://data/images/enemy1/enemy3left.png" type="Texture" id=7]
[ext_resource path="res://data/images/enemy1/headshot.png" type="Texture" id=8]
[ext_resource path="res://data/images/enemy1/headshot2.png" type="Texture" id=9]
[ext_resource path="res://data/images/enemy1/headshot3.png" type="Texture" id=10]
[ext_resource path="res://data/images/enemy1/headshot4.png" type="Texture" id=11]
[ext_resource path="res://data/images/enemy1/headshot5.png" type="Texture" id=12]
[ext_resource path="res://data/images/enemy1/headshot6.png" type="Texture" id=13]
[ext_resource path="res://data/images/enemy1/shot_right/pos1.png" type="Texture" id=14]
[ext_resource path="res://data/images/enemy1/shot_right/pos2.png" type="Texture" id=15]
[ext_resource path="res://data/images/enemy1/shot_right/pos4.png" type="Texture" id=16]
[ext_resource path="res://data/images/enemy1/shot_right/pos3.png" type="Texture" id=17]
[ext_resource path="res://data/images/enemy1/shot_right/pos5.png" type="Texture" id=18]
[ext_resource path="res://data/images/enemy1/shot_right/dead1.png" type="Texture" id=19]
[ext_resource path="res://data/images/enemy1/shot_right/dead2.png" type="Texture" id=20]
[ext_resource path="res://data/images/enemy1/shot_left/pos1.png" type="Texture" id=21]
[ext_resource path="res://data/images/enemy1/shot_left/pos2.png" type="Texture" id=22]
[ext_resource path="res://data/images/enemy1/shot_left/pos4.png" type="Texture" id=23]
[ext_resource path="res://data/images/enemy1/shot_left/pos3.png" type="Texture" id=24]
[ext_resource path="res://data/images/enemy1/shot_left/pos5.png" type="Texture" id=25]
[ext_resource path="res://data/images/enemy1/shot_left/dead1.png" type="Texture" id=26]
[ext_resource path="res://data/images/enemy1/shot_left/dead2.png" type="Texture" id=27]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 33.4817, 31.8766 )

[sub_resource type="CircleShape2D" id=5]
radius = 12.7609

[sub_resource type="CircleShape2D" id=6]
radius = 12.8802

[node name="enemy1" type="KinematicBody2D" groups=["enemies"]]
position = Vector2( 605.549, 351.238 )
collision_layer = 4
collision_mask = 4
input_pickable = true
script = ExtResource( 1 )
blood_effects = ExtResource( 2 )

[node name="unscathed" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 2

[node name="scathed_right" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )

[node name="scathed_left" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )

[node name="hit_rect" type="Area2D" parent="." groups=["enemies"]]
position = Vector2( -0.664609, -7.3754 )
scale = Vector2( 0.416198, 0.472236 )
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="hit_rect"]
shape = SubResource( 4 )

[node name="attack_left" type="Area2D" parent="."]
position = Vector2( -52.4046, 2.70609 )
scale = Vector2( 0.368189, 0.368295 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_left"]
position = Vector2( 3.49414, -5.16614 )
shape = SubResource( 5 )

[node name="attack_right" type="Area2D" parent="."]
position = Vector2( 51.9579, 1.97461 )
scale = Vector2( 0.352946, 0.330194 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_right"]
position = Vector2( -0.276001, -5.04187 )
shape = SubResource( 6 )

[node name="death_moans" type="Node" parent="."]

[node name="moan_timer" type="Timer" parent="."]

[node name="blood_container" type="Node" parent="."]

[node name="swing_timer" type="Timer" parent="."]
one_shot = true

[node name="splat" type="Particles2D" parent="."]

[connection signal="body_entered" from="hit_rect" to="." method="_on_hit_rect_body_enter"]
[connection signal="body_entered" from="attack_left" to="." method="_on_attack_left_body_enter"]
[connection signal="body_exited" from="attack_left" to="." method="_on_attack_left_body_exit"]
[connection signal="body_entered" from="attack_right" to="." method="_on_attack_right_body_enter"]
[connection signal="body_exited" from="attack_right" to="." method="_on_attack_right_body_exit"]
